k8s/api-gw/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: krakend
  labels:
    app: krakend  
spec:
  type: ClusterIP
  selector:
    app: krakend  
  ports:
  - name: http
    port: 8080
